--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=b547b889c82a521c97da",
+    "/css/app.css": "/css/app.css?id=468204136ccae3d41b15"
 }
